--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
   max-width: 860px;
-  margin: 40px auto;
+  margin: 30px auto;
 }
 
 .button {
@@ -34,6 +34,21 @@
 }
 
 @keyframes win {
-  from {opacity: 0.0;}
-  to {opacity: 1.0;}
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+footer {
+  margin: 1rem;
+  border-top: 1px solid #616161;
+}
+
+footer a {
+  text-decoration: none;
+  color: #fff;
+  font-weight: bold;
 }
