--- a/src/components/SingleCard.css
+++ b/src/components/SingleCard.css
@@ -1,7 +1,18 @@
 .card {
   position: relative;
 }
+.card-hard {
+  position: relative;
+  width: 100px;
+  height: 100px;
+}
 
+.card-hard img {
+  width: 100%;
+  display: block;
+  border: 2px solid #fff;
+  border-radius: 6px;
+}
 .card img {
   width: 100%;
   display: block;
@@ -10,6 +21,11 @@
 }
 
 /* card front */
+.card-hard .front {
+  transform: rotateY(90deg);
+  transition: all ease-in 0.2s;
+  position: absolute;
+}
 .card .front {
   transform: rotateY(90deg);
   transition: all ease-in 0.2s;
@@ -21,6 +37,10 @@
 }
 
 /* card back */
+.card-hard .back {
+  transition: all ease-in 0.2s;
+  transition-delay: 0.2s;
+}
 .card .back {
   transition: all ease-in 0.2s;
   transition-delay: 0.2s;
